@@ -1,7 +1,7 @@
 Package: missMethyl
 Type: Package
 Title: Analysis of methylation array data
-Version: 0.99.5
+Version: 0.99.6
 Date: 2014-06-30
 Author: Belinda Phipson and Jovana Maksimovic
 Maintainer: Belinda Phipson <belinda.phipson@mcri.edu.au>, Jovana
