@@ -16,7 +16,7 @@ citEntry(
   entry="article",	
   title="DiffVar: A new method for detecting differential variability with applicatino to methylation in cancer and aging",
   author="Phipson, Belinda and Oshlack, Alicia",
-  journal="Submitted",
+  journal="Genome Biology",
   volume="",
   number="",
   pages="",
