@@ -36,7 +36,7 @@ topVar(fit, coef = NULL, number = 10, sort = TRUE)
 	\item{Adj.P.Value }{adjusted p-value}
 }
 \references{
-	Phipson, B., and Oshlack, A. (2013). A method for detecting differential variability in methylation data shows CpG islands are highly variably methylated in cancers. \emph{Manuscript submitted}.
+	Phipson, B., and Oshlack, A. (2013). A method for detecting differential variability in methylation data shows CpG islands are highly variably methylated in cancers. \emph{Genome Biology, Accepted 10 September 2014}.
 
 	Benjamini, Y., and Hochberg, Y. (1995). Controlling the false discovery rate: a practical and powerful approach to multiple testing. \emph{Journal of the Royal Statistical Society Series}, B, \bold{57}, 289-300.
 }
@@ -55,7 +55,7 @@ group<-factor(rep(c(1,2),each=5))
 design<-model.matrix(~group)
 
 # Fit linear model for differential variability
-vfit<-varFit(y,design,coef=2)
+vfit<-varFit(y,design)
 
 # Look at top table of results
 
